--- a/ChampionsRecycler/app/build.gradle
+++ b/ChampionsRecycler/app/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.android.support:design:25.3.1'
+
 
 }
