--- a/ChampionsRecycler/app/build.gradle
+++ b/ChampionsRecycler/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.koushikdutta.ion:ion:2.+'
 
 
 }
