--- a/ChampionsRecycler/app/build.gradle
+++ b/ChampionsRecycler/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.android.support:design:25.3.1'
     compile 'com.koushikdutta.ion:ion:2.+'
+    compile 'com.android.support:cardview-v7:25.3.1'
 
 
 }
